--- a/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowResources.java.vm
+++ b/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowResources.java.vm
@@ -16,6 +16,10 @@ import android.util.LongSparseArray;
 import android.util.TypedValue;
 import android.view.Display;
 
+#if ($api>=21)
+import com.android.layoutlib.bridge.impl.ParserFactory;
+#end
+
 import org.jetbrains.annotations.NotNull;
 import org.robolectric.RuntimeEnvironment;
 import org.robolectric.annotation.Implementation;
@@ -36,8 +40,12 @@ import org.robolectric.res.builder.ResourceParser;
 import org.robolectric.util.ReflectionHelpers;
 import org.robolectric.res.builder.XmlBlock;
 import org.robolectric.util.ReflectionHelpers.ClassParameter;
+import org.xmlpull.v1.XmlPullParser;
+import org.xmlpull.v1.XmlPullParserException;
 
+import java.io.File;
 import java.io.FileInputStream;
+import java.io.FileNotFoundException;
 import java.io.InputStream;
 import java.lang.reflect.Field;
 import java.lang.reflect.Modifier;
@@ -424,14 +432,58 @@ public class ShadowResources {
     return displayMetrics;
   }
 
+  @SuppressWarnings("unchecked")
   @HiddenApi @Implementation
   public XmlResourceParser loadXmlResourceParser(int id, String type) throws Resources.NotFoundException {
     ResName resName = resolveResName(id);
     XmlBlock block = getResourceLoader().getXml(resName, getQualifiers());
+#if ($api >= 21)
+    if (RuntimeEnvironment.isRendering()) {
+      try {
+        // Rendering, use Bridge loader
+        Class cls = Class.forName(ShadowBridgeContext.CLASS_NAME);
+        System.out.println(block.getFilename());
+        String jarFileName = block.getFilename();
+        int exclamationIndex = jarFileName.indexOf('!');
+        String pathInSDK = jarFileName.substring(exclamationIndex+1);
+        String fullPath = System.getenv("ANDROID_HOME") + "/platforms/android-" + RuntimeEnvironment.getApiLevel() + "/data" + pathInSDK;
+        File f = new File(fullPath);
+        XmlPullParser parser = ParserFactory.create(f);
+        Class<XmlResourceParser> bridgeXmlBlockParserClass = (Class<XmlResourceParser>) Class.forName("com.android.layoutlib.bridge.android.BridgeXmlBlockParser");
+        Class renderActionClass = Class.forName("com.android.layoutlib.bridge.impl.RenderAction");
+
+        return ReflectionHelpers.callConstructor(bridgeXmlBlockParserClass,
+            ClassParameter.from(XmlPullParser.class, parser),
+            ClassParameter.from(cls, ReflectionHelpers.getStaticField(renderActionClass, "sCurrentContext")),
+            ClassParameter.from(boolean.class, block.getPackageName().equals("android")));
+      } catch (ClassNotFoundException e) {
+        //Not rendering, use Robolectric loader
+        if (block == null) {
+          throw new Resources.NotFoundException();
+        }
+        return ResourceParser.from(block, resName.packageName, getResourceLoader().getResourceIndex());
+      } catch (FileNotFoundException e) {
+        Resources.NotFoundException newE = new Resources.NotFoundException();
+        newE.initCause(e);
+        throw newE;
+      } catch (XmlPullParserException e) {
+        Resources.NotFoundException newE = new Resources.NotFoundException();
+        newE.initCause(e);
+        throw newE;
+      }
+    } else {
+      //Not rendering, use Robolectric loader
+      if (block == null) {
+        throw new Resources.NotFoundException();
+      }
+      return ResourceParser.from(block, resName.packageName, getResourceLoader().getResourceIndex());
+    }
+#else
     if (block == null) {
       throw new Resources.NotFoundException();
     }
     return ResourceParser.from(block, resName.packageName, getResourceLoader().getResourceIndex());
+#end
   }
 
   @HiddenApi @Implementation
