Added build config for API 22 Added missing methods to RoboWebSettings. Make RobolectricActivityManager implement all API 22 methods. Added conditional for ShadowLocaleData percent is now a String

--- a/robolectric-shadows/shadows-core/src/main/resources/android/app/RobolectricActivityManager.java.vm
+++ b/robolectric-shadows/shadows-core/src/main/resources/android/app/RobolectricActivityManager.java.vm
@@ -42,6 +42,11 @@ import android.os.StrictMode;
 #if ($api >= 21)
 import android.service.voice.IVoiceInteractionSession;
 import com.android.internal.app.IVoiceInteractor;
+import android.app.IActivityContainer;
+#end
+
+#if ($api >= 22)
+import android.view.Display;
 #end
 
 import java.util.List;
@@ -69,6 +74,7 @@ public class RobolectricActivityManager implements IActivityManager {
 #end
 
 #if ($api >= 21)
+
   @Override
   public int startActivity(IApplicationThread caller, String callingPackage, Intent intent, String resolvedType, IBinder resultTo, String resultWho, int requestCode, int flags, ProfilerInfo profilerInfo, Bundle options) throws RemoteException {
     return 0;
@@ -80,14 +86,44 @@ public class RobolectricActivityManager implements IActivityManager {
   }
 
   @Override
-  public int startActivityAsCaller(IApplicationThread caller, String callingPackage, Intent intent, String resolvedType, IBinder resultTo, String resultWho, int requestCode, int flags, ProfilerInfo profilerInfo, Bundle options, int userId) throws RemoteException {
-    return 0;
-  }
-
-  @Override
   public WaitResult startActivityAndWait(IApplicationThread caller, String callingPackage, Intent intent, String resolvedType, IBinder resultTo, String resultWho, int requestCode, int flags, ProfilerInfo profilerInfo, Bundle options, int userId) throws RemoteException {
     return null;
   }
+#end
+
+
+#if ($api >= 22)
+
+  @Override
+  public void systemBackupRestored() {
+
+  }
+
+  @Override
+  public void startInPlaceAnimationOnFrontMostApplication(ActivityOptions opts) {
+
+  }
+
+  @Override
+  public int getActivityDisplayId(IBinder activityToken) {
+    return Display.DEFAULT_DISPLAY;
+  }
+
+  @Override
+  public boolean removeTask(int taskId) {
+    return false;
+  }
+
+  @Override
+  public int checkPermissionWithToken(String permission, int pid, int uid, IBinder callerToken) {
+    return -1;
+  }
+
+  @Override
+  public void registerTaskStackListener(ITaskStackListener listener) {
+
+  }
+#elseif ($api >= 21)
 
 #elseif ($api >= 18)
   @Override
@@ -207,6 +243,11 @@ public class RobolectricActivityManager implements IActivityManager {
   @Override
   public void releaseSomeActivities(IApplicationThread app) throws RemoteException {
 
+  }
+
+  @Override
+  public int startActivityAsCaller(IApplicationThread caller, String callingPackage, Intent intent, String resolvedType, IBinder resultTo, String resultWho, int requestCode, int flags, ProfilerInfo profilerInfo, Bundle options, int userId) throws RemoteException {
+    return 0;
   }
 #end
 
@@ -721,7 +762,18 @@ public class RobolectricActivityManager implements IActivityManager {
     return 0;
   }
 
-#if ($api >= 21)
+#if ($api >= 22)
+  @Override
+  public int checkUriPermission(Uri uri, int pid, int uid, final int modeFlags, int userId, IBinder callerToken) {
+    return -1;
+  }
+
+  @Override
+  public void grantUriPermission(IApplicationThread caller, String targetPkg, Uri uri, int mode, int userId) throws RemoteException {
+
+  }
+
+#elseif ($api >= 21)
   @Override
   public int checkUriPermission(Uri uri, int pid, int uid, int mode, int userId) throws RemoteException {
     return 0;
@@ -732,20 +784,6 @@ public class RobolectricActivityManager implements IActivityManager {
 
   }
 
-  @Override
-  public void revokeUriPermission(IApplicationThread caller, Uri uri, int mode, int userId) throws RemoteException {
-
-  }
-
-  @Override
-  public void takePersistableUriPermission(Uri uri, int modeFlags, int userId) throws RemoteException {
-
-  }
-
-  @Override
-  public void releasePersistableUriPermission(Uri uri, int modeFlags, int userId) throws RemoteException {
-
-  }
 #elseif ($api >= 19)
   @Override
   public int checkUriPermission(Uri uri, int pid, int uid, int mode) throws RemoteException {
@@ -873,6 +911,22 @@ public class RobolectricActivityManager implements IActivityManager {
   public void noteWakeupAlarm(IIntentSender sender, int sourceUid, String sourcePkg) throws RemoteException {
 
   }
+
+  @Override
+  public void releasePersistableUriPermission(Uri uri, int modeFlags, int userId) throws RemoteException {
+
+  }
+
+  @Override
+  public void takePersistableUriPermission(Uri uri, int modeFlags, int userId) throws RemoteException {
+
+  }
+
+  @Override
+  public void revokeUriPermission(IApplicationThread caller, Uri uri, int mode, int userId) throws RemoteException {
+
+  }
+
 #else
   @Override
   public void noteWakeupAlarm(IIntentSender sender) {
@@ -1233,11 +1287,6 @@ public class RobolectricActivityManager implements IActivityManager {
 #end
 
   @Override
-  public boolean removeTask(int taskId, int flags) throws RemoteException {
-    return false;
-  }
-
-  @Override
   public void registerProcessObserver(IProcessObserver observer) throws RemoteException {
 
   }
@@ -1409,11 +1458,6 @@ public class RobolectricActivityManager implements IActivityManager {
   }
 
   @Override
-  public IActivityContainer getEnclosingActivityContainer(IBinder activityToken) throws RemoteException {
-    return null;
-  }
-
-  @Override
   public IBinder getHomeActivityToken() throws RemoteException {
     return null;
   }
@@ -1494,6 +1538,13 @@ public class RobolectricActivityManager implements IActivityManager {
     return null;
   }
 
+#if ($api < 22)
+  @Override
+  public boolean removeTask(int taskId, int flags) throws RemoteException {
+    return false;
+  }
+#end
+
 #if ($api < 21)
   @Override
   public boolean targetTaskAffinityMatchesActivity(IBinder token, String destAffinity) {
@@ -1540,5 +1591,11 @@ public class RobolectricActivityManager implements IActivityManager {
   public void reportTopActivityExtras(IBinder token, Bundle extras) throws RemoteException {
 
   }
+#elseif ($api == 21)
+  @Override
+  public IActivityContainer getEnclosingActivityContainer(IBinder activityToken) throws RemoteException {
+    return null;
+  }
 #end
+
 }
