Added build config for API 22 Added missing methods to RoboWebSettings.java

--- a/robolectric-shadows/shadows-core/src/main/resources/android/app/RobolectricActivityManager.java.vm
+++ b/robolectric-shadows/shadows-core/src/main/resources/android/app/RobolectricActivityManager.java.vm
@@ -68,7 +68,14 @@ public class RobolectricActivityManager implements IActivityManager {
   }
 #end
 
-#if ($api >= 21)
+#if ($api >= 22)
+
+  @Override
+  public void systemBackupRestored() {
+
+  }
+
+#elseif ($api >= 21)
   @Override
   public int startActivity(IApplicationThread caller, String callingPackage, Intent intent, String resolvedType, IBinder resultTo, String resultWho, int requestCode, int flags, ProfilerInfo profilerInfo, Bundle options) throws RemoteException {
     return 0;
