Added dummy implementation for ShadowWindowManagerGlobal.getWindowManagerService() which always returned null service on previous SDKs but since 22 now will make recursive calls till it gets a non-null.

--- a/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowWindowManagerGlobal.java.vm
+++ b/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowWindowManagerGlobal.java.vm
@@ -21,6 +21,12 @@ public class ShadowWindowManagerGlobal {
   public static Object getWindowSession(Looper looper) {
     return null;
   }
+
+  @Implementation
+  public static Object getWindowManagerService() {
+    return null;
+  }
+
 }
 #else
 public class ShadowWindowManagerGlobal {
